<resources>
    <string name="app_name">Weather App</string>
    <string name="splash_logo">Splash_logo</string>
    <string name="weather_matters_we_ve_got_the_details">Weather Matters, \n We\ve Got the Details</string>
    <string name="todo">TODO</string>
    <string name="today">Today</string>
    <string name="sunny">SUNNY</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="_0_0_c">0.0 C</string>
    <string name="sunnylogo">sunnyLogo</string>
    <string name="today_s_day">Today\'s Day</string>
    <string name="_0_0">0.0%</string>
    <string name="sunset">Sunset</string>
</resources>